--- a/jason/wedding/weddinghome.html
+++ b/jason/wedding/weddinghome.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Our Story</title>
-<link href="wedding.css" rel="stylesheet" type="text/css" />
-<link href='http://fonts.googleapis.com/css?family=Alex+Brush' rel='stylesheet' type='text/css'>
-<!--[if lte IE 7]>
-
-<style>
-.content { margin-right: -1px; } /* this 1px negative margin can be placed on any of the columns in this layout with the same corrective effect. */
-ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it needs to correct extra whiltespace between the links */
-</style>
-<![endif]-->
-
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Jason and Jessica Charleston</title>
+    <link href="wedding.css" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Alex+Brush' rel='stylesheet' type='text/css'>
+</head>
 <body>
 	<div id="page-wrap">
         <div id="main_head">
@@ -20,10 +13,10 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
         </div>
         <ul id="tabs">
             <div id="tabs1">
-                <li><a href="weddinghome.html">Home</a></li>
+                <li id="selected"><a href="weddinghome.html">Home</a></li>
             </div>
             <div id="tabs2">
-                <li id="selected"><a href="ourstory.html">Our Story</a></li>
+                <li><a href="ourstory.html">Our Story</a></li>
             </div>
             <div id="tabs3">
                 <li><a href="thewedding.html">The Wedding</a></li>
@@ -45,18 +38,21 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
             </div>  
             <div id="tabs9">
                 <li><a href="rsvp.html">RSVP</a></li>  
-            </div>   
+            </div>
         </ul>
-		<div id="gradc2"></div>
+
+        <!--<div id="c1">-->
+        <div id="gradc1"></div>
         <div id="content">
-            <h1>Our Story</h1>
+            <h1>Home</h1>
             <p>Wedding Stuff</p>
+            <p><img src="images/jasejess.jpg" width="640" height="480" alt="Jason and Jessica" /></p>
         <!-- end .content -->
         </div>
         <div class="footer">
             <p>Copyright &copy; 2014 by Sean Charleston. All rights reserved.</p>
         <!-- end .footer -->
         </div>
-	</div>
+    </div>
 </body>
 </html>
