--- a/jason/wedding/groomsmen.html
+++ b/jason/wedding/groomsmen.html
@@ -2,11 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Our Story</title>
-<link href="wedding.css" rel="stylesheet" type="text/css" />
-<link href='http://fonts.googleapis.com/css?family=Alex+Brush' rel='stylesheet' type='text/css'>
-<!--[if lte IE 7]>
-
+<title>Groomsmen</title>
+<link href="wedding.css" rel="stylesheet" type="text/css" /><!--[if lte IE 7]>
 <style>
 .content { margin-right: -1px; } /* this 1px negative margin can be placed on any of the columns in this layout with the same corrective effect. */
 ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it needs to correct extra whiltespace between the links */
@@ -23,7 +20,7 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
                 <li><a href="weddinghome.html">Home</a></li>
             </div>
             <div id="tabs2">
-                <li id="selected"><a href="ourstory.html">Our Story</a></li>
+                <li><a href="ourstory.html">Our Story</a></li>
             </div>
             <div id="tabs3">
                 <li><a href="thewedding.html">The Wedding</a></li>
@@ -35,7 +32,7 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
                 <li><a href="photogallery.html">Photo Gallery</a></li>  
             </div> 
             <div id="tabs6">
-                <li><a href="groomsmen.html">Groomsmen</a></li>  
+                <li id="selected"><a href="groomsmen.html">Groomsmen</a></li>  
             </div> 
             <div id="tabs7">
                 <li><a href="bridesmaids.html">Bridesmaids</a></li>  
@@ -47,9 +44,9 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
                 <li><a href="rsvp.html">RSVP</a></li>  
             </div>   
         </ul>
-		<div id="gradc2"></div>
-        <div id="content">
-            <h1>Our Story</h1>
+    
+        <div id="c1">
+            <h1>Groomsmen</h1>
             <p>Wedding Stuff</p>
         <!-- end .content -->
         </div>
